# vector-algorithms

./: vector-algorithms.cabal
bench/simple/: Main.hs
src/specialized/heap/: MVector.hsig
src/specialized/heap/Vector/Algorithms/Sort/: Heap.hs
src/specialized/insertion/: MVector.hsig
src/specialized/insertion/Vector/Algorithms/Sort/: Insertion.hs
src/specialized/merge/: Elem.hsig  MVector.hsig
src/specialized/merge/Vector/Algorithms/Sort/: Merge.hs
src/specialized/optimal/: MVector.hsig
src/specialized/optimal/Vector/Algorithms/Sort/: Optimal.hs
src/specialized/structures/Elem/: Int.hs  Word.hs
src/specialized/structures/MVector/Unboxed/Unsafe/: Int.hs  Word.hs
