cabal-version:     3.0
name:              vector-algorithms
version:           1.0.0.0
license:           BSD-3-Clause
license-file:      LICENSE
author:            Dan Doel
maintainer:        Dan Doel <dan.doel@gmail.com>
                   Erik de Castro Lopo <erikd@mega-nerd.com>
copyright:         (c) 2008,2009,2010,2011,2012,2013,2014,2015,2020 Dan Doel
                   (c) 2015 Tim Baumann
homepage:          https://github.com/erikd/vector-algorithms/
category:          Data
synopsis:          Efficient algorithms for vector arrays
description:       Efficient algorithms for sorting vector arrays. At some stage
                   other vector algorithms may be added.
build-type:        Simple
extra-source-files: CHANGELOG.md


flag BoundsChecks
  description: Enable bounds checking
  default: True

flag UnsafeChecks
  description: Enable bounds checking in unsafe operations at the cost of a
               significant performance penalty.
  default: False

flag InternalChecks
  description: Enable internal consistency checks at the cost of a
               significant performance penalty.
  default: False

flag bench
  description: Build a benchmarking program to test vector-algorithms
               performance
  default: True

flag properties
  description: Enable the quickcheck tests
  default: True

-- flag dump-simpl
--   description: Dumps the simplified core during compilation
--   default: False

flag llvm
  description: Build using llvm
  default: False

source-repository head
  type:     git
  location: https://github.com/erikd/vector-algorithms/

common specialized
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 5
               , primitive >= 0.3 && < 0.8,

library optimal
  import: specialized
  hs-source-dirs: src/specialized/optimal

  signatures: Elem MVector

  exposed-modules:
    Vector.Algorithms.Sort.Optimal

library insertion
  import: specialized
  hs-source-dirs: src/specialized/insertion

  signatures: Elem MVector

  build-depends: optimal

  exposed-modules:
    Vector.Algorithms.Sort.Insertion

library merge
  import: specialized
  hs-source-dirs: src/specialized/merge

  signatures: Elem MVector

  build-depends: insertion

  exposed-modules:
    Vector.Algorithms.Sort.Merge

library heap
  import: specialized
  hs-source-dirs: src/specialized/heap

  signatures: Elem MVector
  
  build-depends: optimal

  exposed-modules:
    Vector.Algorithms.Sort.Heap

library structures
  import: specialized
  hs-source-dirs: src/specialized/structures

  build-depends:
      vector >= 0.6 && < 0.13

  exposed-modules:
    Elem.Int
    Elem.Word

    MVector.Unboxed.Unsafe.Int
    MVector.Unboxed.Unsafe.Word

library
  default-language: Haskell2010
  hs-source-dirs: src/classic

  build-depends: base >= 4.5 && < 5,
                 vector >= 0.6 && < 0.13,
                 primitive >=0.3 && <0.8,
                 bytestring >= 0.9 && < 1.0

  if ! impl (ghc >= 7.8)
    build-depends: tagged >= 0.4 && < 0.9

  exposed-modules:
    Data.Vector.Algorithms.Optimal
    Data.Vector.Algorithms.Insertion
    Data.Vector.Algorithms.Intro
    Data.Vector.Algorithms.Merge
    Data.Vector.Algorithms.Radix
    Data.Vector.Algorithms.Search
    Data.Vector.Algorithms.Heap
    Data.Vector.Algorithms.AmericanFlag
    Data.Vector.Algorithms.Tim

  other-modules:
    Data.Vector.Algorithms.Common

  ghc-options:
    -funbox-strict-fields

  -- Cabal/Hackage complains about these
  -- if flag(dump-simpl)
  --   ghc-options: -ddump-simpl -ddump-to-file

  if flag(llvm)
    ghc-options: -fllvm

  include-dirs:
    include

  install-includes:
    vector.h

  if flag(BoundsChecks)
    cpp-options: -DVECTOR_BOUNDS_CHECKS

  if flag(UnsafeChecks)
    cpp-options: -DVECTOR_UNSAFE_CHECKS

  if flag(InternalChecks)
    cpp-options: -DVECTOR_INTERNAL_CHECKS

benchmark simple-bench
  default-language: Haskell2010
  hs-source-dirs: bench/simple
  type: exitcode-stdio-1.0

  if !flag(bench)
    buildable: False

  main-is: Main.hs

  other-modules:
    Blocks

  build-depends:
    base, mwc-random, vector, vector-algorithms,
    merge, heap, insertion, structures

  mixins:
    merge
    requires
      ( Elem as Elem.Word
      , MVector as MVector.Unboxed.Unsafe.Word
      ),
    heap
    requires
      ( Elem as Elem.Word
      , MVector as MVector.Unboxed.Unsafe.Word
      ),
    insertion
    requires
      ( Elem as Elem.Word
      , MVector as MVector.Unboxed.Unsafe.Word
      )

  ghc-options: -Wall

  -- Cabal/Hackage complains about these
  -- if flag(dump-simpl)
  --   ghc-options: -ddump-simpl -ddump-to-file

  if flag(llvm)
    ghc-options: -fllvm

test-suite properties
  default-language: Haskell2010
  hs-source-dirs: tests/properties
  type: exitcode-stdio-1.0
  main-is: Tests.hs

  other-modules:
    Optimal
    Properties
    Util

  if !flag(properties)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      QuickCheck > 2.9 && < 2.14,
      vector,
      vector-algorithms

  if flag(llvm)
    ghc-options: -fllvm
